// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message renders without crashing when message has been sent to 1 recipient 1`] = `
<li
  className="chat-message"
  key="1"
>
  <span
    className="date"
  >
    [8/28/2018]
  </span>
  <button
    className="user-select from"
    onClick={[Function]}
    type="button"
  >
    fromUser: 
  </button>
  <button
    className="user-select to"
    key="recipient 1"
    onClick={[Function]}
    type="button"
  >
    @recipient 1
  </button>
  <span
    className="message"
  >
    testMessage1
  </span>
</li>
`;

exports[`Message renders without crashing when message has been sent to 2 recipients 1`] = `
<li
  className="chat-message"
  key="1"
>
  <span
    className="date"
  >
    [8/28/2018]
  </span>
  <button
    className="user-select from"
    onClick={[Function]}
    type="button"
  >
    fromUser: 
  </button>
  <button
    className="user-select to"
    key="recipient 1"
    onClick={[Function]}
    type="button"
  >
    @recipient 1
  </button>
  <button
    className="user-select to"
    key="recipient 2"
    onClick={[Function]}
    type="button"
  >
    @recipient 2
  </button>
  <span
    className="message"
  >
    testMessage1
  </span>
</li>
`;

exports[`Message renders without crashing when message has been sent to 3 recipients 1`] = `
<li
  className="chat-message"
  key="1"
>
  <span
    className="date"
  >
    [8/28/2018]
  </span>
  <button
    className="user-select from"
    onClick={[Function]}
    type="button"
  >
    fromUser: 
  </button>
  <button
    className="user-select to"
    key="recipient 1"
    onClick={[Function]}
    type="button"
  >
    @recipient 1
  </button>
  <button
    className="user-select to"
    key="recipient 2"
    onClick={[Function]}
    type="button"
  >
    @recipient 2
  </button>
  <button
    className="user-select to"
    key="recipient 3"
    onClick={[Function]}
    type="button"
  >
    @recipient 3
  </button>
  <span
    className="message"
  >
    testMessage1
  </span>
</li>
`;

exports[`Message renders without crashing when message has been sent to all and to is not null 1`] = `
<li
  className="chat-message"
  key="1"
>
  <span
    className="date"
  >
    [8/28/2018]
  </span>
  <button
    className="user-select from"
    onClick={[Function]}
    type="button"
  >
    fromUser: 
  </button>
  <span
    className="message"
  >
    testMessage1
  </span>
</li>
`;

exports[`Message renders without crashing when message has been sent to all and to is null 1`] = `
<li
  className="chat-message"
  key="1"
>
  <span
    className="date"
  >
    [8/28/2018]
  </span>
  <button
    className="user-select from"
    onClick={[Function]}
    type="button"
  >
    fromUser: 
  </button>
  <span
    className="message"
  >
    testMessage1
  </span>
</li>
`;
